Fixed SocMedia button in menu. They were not centered and floated outside the screen, when resized. Centered and stacked.

--- a/assets/css/pc.css
+++ b/assets/css/pc.css
@@ -162,14 +162,14 @@
     }
     .some1 {
         width: 50px;
-        margin-left: -170px;
+        /*margin-left: -170px;
         position: absolute;
-        bottom: 3px;
+        bottom: 3px;*/
     }
     .some2 {
         width: 50px;
-        margin-left: -100px;
+        /*margin-left: -100px;
         position: absolute;
-        bottom: 0;
+        bottom: 0;*/
     }
 }
